MattScarpino_re2c_demo/part1/simple_c.c
/* Generated by re2c 2.0.3 on Sun Dec 13 18:51:29 2020 */
#line 1 "simple_c.re"
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include "tokens.h"

#define   YYCTYPE     char
#define   YYCURSOR    s->cur
#define   YYMARKER    s->ptr

typedef struct Scanner {
  char *top, *cur, *ptr, *pos;
  int line;  
} Scanner;

int scan(Scanner* s, char *buff_end) {
  
regular:
  if (s->cur >= buff_end) {
    return END_TOKEN;
  }
  s->top = s->cur;

#line 33 "simple_c.re"



#line 30 "simple_c.c"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy4;
	case '\n':	goto yy7;
	case '\r':	goto yy9;
	case '"':	goto yy10;
	case '(':	goto yy11;
	case ')':	goto yy13;
	case '/':	goto yy15;
	case '0':	goto yy16;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case ';':	goto yy20;
	case '=':	goto yy22;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	case 'i':	goto yy27;
	case 'r':	goto yy28;
	case '{':	goto yy29;
	case '}':	goto yy31;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
#line 60 "simple_c.re"
	{
    printf("unexpected character: %c\n", *s->cur);
    goto regular;
  }
#line 122 "simple_c.c"
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy4;
	default:	goto yy6;
	}
yy6:
#line 47 "simple_c.re"
	{ goto regular; }
#line 135 "simple_c.c"
yy7:
	++YYCURSOR;
#line 53 "simple_c.re"
	{
    s->pos = s->cur;
    s->line++;
    goto regular;
  }
#line 144 "simple_c.c"
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy7;
	default:	goto yy3;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy3;
	default:	goto yy33;
	}
yy11:
	++YYCURSOR;
#line 38 "simple_c.re"
	{ return LPAREN; }
#line 161 "simple_c.c"
yy13:
	++YYCURSOR;
#line 39 "simple_c.re"
	{ return RPAREN; }
#line 166 "simple_c.c"
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case '*':	goto yy35;
	default:	goto yy3;
	}
yy16:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'X':
	case 'x':	goto yy39;
	default:	goto yy19;
	}
yy17:
#line 50 "simple_c.re"
	{ return(INT_LITERAL); }
#line 183 "simple_c.c"
yy18:
	yych = *++YYCURSOR;
yy19:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy37;
	default:	goto yy17;
	}
yy20:
	++YYCURSOR;
#line 42 "simple_c.re"
	{ return SEMICOLON; }
#line 208 "simple_c.c"
yy22:
	++YYCURSOR;
#line 37 "simple_c.re"
	{ return EQUAL; }
#line 213 "simple_c.c"
yy24:
	yych = *++YYCURSOR;
yy25:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	default:	goto yy26;
	}
yy26:
#line 46 "simple_c.re"
	{ return NAME; }
#line 286 "simple_c.c"
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy41;
	default:	goto yy25;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy42;
	default:	goto yy25;
	}
yy29:
	++YYCURSOR;
#line 40 "simple_c.re"
	{ return LBRACE; }
#line 303 "simple_c.c"
yy31:
	++YYCURSOR;
#line 41 "simple_c.re"
	{ return RBRACE; }
#line 308 "simple_c.c"
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy43;
	default:	goto yy33;
	}
yy35:
	++YYCURSOR;
#line 36 "simple_c.re"
	{ goto comment; }
#line 319 "simple_c.c"
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy37;
	default:	goto yy17;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy45;
	default:	goto yy40;
	}
yy40:
	YYCURSOR = YYMARKER;
	goto yy17;
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy47;
	default:	goto yy25;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy49;
	default:	goto yy25;
	}
yy43:
	++YYCURSOR;
#line 45 "simple_c.re"
	{ return STRING_LITERAL; }
#line 375 "simple_c.c"
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy45;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy37;
	default:	goto yy17;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	default:	goto yy48;
	}
yy48:
#line 43 "simple_c.re"
	{ return INT_TYPE; }
#line 478 "simple_c.c"
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy50;
	default:	goto yy25;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy51;
	default:	goto yy25;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy52;
	default:	goto yy25;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	default:	goto yy53;
	}
yy53:
#line 44 "simple_c.re"
	{ return RETURN; }
#line 568 "simple_c.c"
}
#line 64 "simple_c.re"


comment:

#line 575 "simple_c.c"
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy58;
	case '*':	goto yy60;
	default:	goto yy56;
	}
yy56:
	++YYCURSOR;
yy57:
#line 70 "simple_c.re"
	{ goto comment; }
#line 589 "simple_c.c"
yy58:
	++YYCURSOR;
#line 69 "simple_c.re"
	{ s->line++; goto comment; }
#line 594 "simple_c.c"
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy61;
	default:	goto yy57;
	}
yy61:
	++YYCURSOR;
#line 68 "simple_c.re"
	{ goto regular; }
#line 605 "simple_c.c"
}
#line 71 "simple_c.re"

}

int main() {

  FILE *fp;
  long size;
  char *buff, *buff_end;
  size_t bytes;
  int token = 0;
  Scanner scanner;

  /* Open input file */
  fp = fopen("test.dat", "r");
  if(fp == NULL) {
    fprintf(stderr, "Can't open test file\n");
    exit(-1);
  }

  /* Get file size */
  fseek(fp, 0, SEEK_END);
  size = ftell(fp);
  rewind(fp);

  /* Allocate buffer and read */
  buff = (char*) malloc(size * sizeof(char));
  bytes = fread(buff, 1, size, fp);  
  if (bytes != size) {
    fprintf(stderr, "Reading error"); 
    exit(-1);
  }

  /* Start scanning */
  scanner.top = buff;
  scanner.cur = buff;
  scanner.pos = buff;  
  scanner.line = 1;
  
  buff_end = (char*) (((char*)buff) + size);
  while(token = scan(&scanner, buff_end)) {
    switch(token) {
    case SEMICOLON: printf("SEMICOLON"); break;      
    case LPAREN: printf("LPAREN"); break;
    case RPAREN: printf("RPAREN"); break;
    case LBRACE: printf("LBRACE"); break;
    case RBRACE: printf("RBRACE"); break;
    case EQUAL: printf("EQUAL"); break;
    case INT_TYPE: printf("INT_TYPE"); break;
    case RETURN: printf("RETURN"); break;
    case NAME:
      printf("NAME (\'%.*s\')", scanner.cur - scanner.top, scanner.top);
      break;
    case STRING_LITERAL:
      printf("STRING_LITERAL (\'%.*s\')", scanner.cur - scanner.top, scanner.top);
      break;
    case INT_LITERAL:
      printf("INT_LITERAL (\'%.*s\')", scanner.cur - scanner.top, scanner.top);
      break;
    default:
      break;
    }
    if(END_TOKEN == token) {
      break;
    }
    printf(" found on Line %d at Position %d\n", scanner.line, (int)(scanner.top - scanner.pos));
  }

  /* Close file and deallocate */
  fclose(fp);
  free(buff);
  return(0);
}
